HelloUltraviolet/Fixtures/RejectedSource/Parallelism/DispatchChunkType/Expected.uv
//! Expected diagnostic metadata for the DispatchChunkType rejected-source specimen.

expectedDiagnostic("E-SEM-3133", "rule.20.Dispatch-Chunk-Type-Err")
